--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <h1 class="logo-title">yo:ga time</h1>
                 <h4 class="logo-subtitle">ma safe place</h4>
                 <p class="histoire-fragment citation-animated">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Aliquam nibh urna, pharetra a elit ac, laoreet vestibulum
-                    nunc. Morbi ornare, erat at molestie lacinia
+                    « Le yoga nous enseigne à guérir ce qui n'a pas besoin
+                    d'être enduré, et à endurer ce qui ne peut pas être guérit
+                    ».<br />
+                    B.K.S Iyengar
                 </p>
             </header>
 
@@ -46,7 +47,7 @@
 
                 <p class="histoire-fragment">
                     Une chute intérieure.<br />Des crises d'angoisse.<br />Une
-                    dépression de 4 longues années.
+                    dépression de 3 longues années.
                 </p>
 
                 <p>
@@ -135,7 +136,7 @@
                 </ul>
 
                 <p>
-                    La méditation, le son, le travail énergétique, les chakras
+                    La méditation, le son, le travail énergétique et les chakras
                     ont ouvert des espaces qui me semblent plus subtils et plus
                     intérieurs.<br />Des espaces où le deuil de Lilou s'est
                     transformé.
@@ -197,6 +198,13 @@
 
                 <div class="pour-qui-block">
                     <h3>✨ Yoga</h3>
+                    <p>
+                        Des postures variées, dynamiques ou douces, pratiquées
+                        avec conscience pour renforcer et assouplir le corps,
+                        soutenir la santé des articulations et des fascias,
+                        améliorer la mobilité et cultiver une présence stable
+                        dans le mouvement comme dans l'immobilité.
+                    </p>
                     <ul>
                         <li>Ashtanga, Vinyasa, Yin</li>
                         <li>Yoga pré & postnatal</li>
@@ -226,7 +234,12 @@
 
                 <div class="pour-qui-block">
                     <h3>🌬 Breathwork</h3>
-
+                    <p>
+                        Des pratiques de respiration guidée pour réguler le
+                        système nerveux, soutenir la santé globale, libérer les
+                        tensions et retrouver clarté, énergie et tranquillité
+                        d'esprit.
+                    </p>
                     <p class="pour-qui-label">
                         Séances de respiration consciente pour :
                     </p>
@@ -249,7 +262,12 @@
 
                 <div class="pour-qui-block">
                     <h3>🔔 Sound Healing</h3>
-
+                    <p>
+                        Des séances basées sur les vibrations et les sons pour
+                        favoriser la détente profonde, apaiser le système
+                        nerveux et créer un espace de calme intérieur propice à
+                        l'intégration.
+                    </p>
                     <p class="pour-qui-label">Des voyages sonores pour :</p>
                     <ul>
                         <li>Ralentir</li>
@@ -269,7 +287,11 @@
 
                 <div class="pour-qui-block">
                     <h3>🪷 Méditation</h3>
-
+                    <p>
+                        Des séances guidées de présence et d'attention pour calmer le
+                        mental, développer la stabilité intérieure et nourrir
+                        une qualité de calme durable.
+                    </p>
                     <p class="pour-qui-label">Pratiques de méditation pour :</p>
                     <ul>
                         <li>Apaiser le mental</li>
@@ -301,59 +323,6 @@
                     </p>
                 </div>
             </section>
-            <section class="content" id="contenu">
-                <h2>ॐ Dans Ma Safe Place, tu trouveras :</h2>
-
-                <article>
-                    <h3>🧘‍♀️ La pratique des asanas</h3>
-                    <p>
-                        Des postures variées, dynamiques ou douces, pratiquées
-                        avec conscience pour renforcer et assouplir le corps,
-                        soutenir la santé des articulations et des fascias,
-                        améliorer la mobilité et cultiver une présence stable
-                        dans le mouvement comme dans l'immobilité.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>🔔 Des bains sonores</h3>
-                    <p>
-                        Des séances basées sur les vibrations et les sons pour
-                        favoriser la détente profonde, apaiser le système
-                        nerveux et créer un espace de calme intérieur propice à
-                        l'intégration.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>🌬 Du breathwork</h3>
-                    <p>
-                        Des pratiques de respiration guidée pour réguler le
-                        système nerveux, soutenir la santé globale, libérer les
-                        tensions et retrouver clarté, énergie et tranquillité
-                        d'esprit.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>🧘‍♀️ De la méditation guidée</h3>
-                    <p>
-                        Des temps de présence et d'attention pour calmer le
-                        mental, développer la stabilité intérieure et nourrir
-                        une qualité de calme durable.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>📿 La philosophie du yoga</h3>
-                    <p>
-                        Une approche accessible des principes du yoga pour
-                        relier la pratique au quotidien, soutenir la santé
-                        mentale et physique, et accompagner un mode de vie plus
-                        conscient, équilibré et aligné.
-                    </p>
-                </article>
-            </section>
             <section class="tarifs-particuliers" id="tarifs-particuliers">
                 <h2>💰 Tarifs pour les particuliers</h2>
 
@@ -382,7 +351,7 @@
 
                     <h4>Cours collectif en ligne (minimum 5 personnes)</h4>
                     <ul>
-                        <li>20 € PP</li>
+                        <li>13 € PP</li>
                     </ul>
 
                     <p class="tarif-note">
@@ -397,7 +366,10 @@
                 <div class="tarif-block">
                     <h3>🔔 Sound Healing & accompagnements énergétiques</h3>
 
-                    <h4>1. Nettoyage énergétique de l'espace</h4>
+                    <h4>
+                        <span class="no-underline">1. </span>Nettoyage
+                        énergétique de l'espace
+                    </h4>
                     <p class="tarif-details">20 minutes — 50 €</p>
                     <p>
                         Un soin destiné à purifier et réharmoniser un lieu
@@ -411,7 +383,10 @@
                         pour retrouver une sensation de "chez soi".
                     </p>
 
-                    <h4>2. Soin de guérison globale</h4>
+                    <h4>
+                        <span class="no-underline">2. </span>Soin de guérison
+                        globale
+                    </h4>
                     <p class="tarif-details">Durée : 60 à 75 min</p>
                     <ul>
                         <li>70 € par personne</li>
@@ -430,7 +405,10 @@
                         transition, de fatigue ou de remise en question.
                     </p>
 
-                    <h4>3. Dépression & états de lourdeur</h4>
+                    <h4>
+                        <span class="no-underline">3. </span>Dépression & états
+                        de lourdeur
+                    </h4>
                     <p class="tarif-details">
                         Durée : 60 à 75 minutes — 75 € par personne
                     </p>
@@ -446,7 +424,10 @@
                         complément.
                     </p>
 
-                    <h4>4. Soin pour l'insomnie & troubles du sommeil</h4>
+                    <h4>
+                        <span class="no-underline">4. </span>Soin pour
+                        l'insomnie & troubles du sommeil
+                    </h4>
                     <p class="tarif-details">
                         Durée : 60 à 75 minutes — 75 € par personne
                     </p>
@@ -457,7 +438,10 @@
                         d'endormissement ou de réveils nocturnes.
                     </p>
 
-                    <h4>5. Technique spécifique de sommeil profond</h4>
+                    <h4>
+                        <span class="no-underline">5. </span>Technique
+                        spécifique de sommeil profond
+                    </h4>
                     <p class="tarif-details">
                         Durée : 45 min — 65 € par personne
                     </p>
@@ -468,7 +452,10 @@
                         au repos du mental.
                     </p>
 
-                    <h4>6. Harmonisation des ondes cérébrales</h4>
+                    <h4>
+                        <span class="no-underline">6. </span>Harmonisation des
+                        ondes cérébrales
+                    </h4>
                     <p class="tarif-details">Durée : environ 45 min</p>
                     <ul>
                         <li>65 € par personne</li>
@@ -482,7 +469,10 @@
                         anxieuses, stressées ou mentalement surchargées.
                     </p>
 
-                    <h4>7. Détox mentale & émotionnelle</h4>
+                    <h4>
+                        <span class="no-underline">7. </span>Détox mentale &
+                        émotionnelle
+                    </h4>
                     <p class="tarif-details">
                         Durée : environ 60 min — 70 € par personne
                     </p>
@@ -494,7 +484,10 @@
                         clarté.
                     </p>
 
-                    <h4>8. Soulagement énergétique des douleurs du dos</h4>
+                    <h4>
+                        <span class="no-underline">8. </span>Soulagement
+                        énergétique des douleurs du dos
+                    </h4>
                     <p class="tarif-details">
                         Durée : 45 à 60 min — 75 € par personne
                     </p>
@@ -513,7 +506,10 @@
                         venir en complément, dans une approche globale et douce.
                     </p>
 
-                    <h4>9. Harmonisation des chakras</h4>
+                    <h4>
+                        <span class="no-underline">9. </span>Harmonisation des
+                        chakras
+                    </h4>
                     <p class="tarif-details">
                         Durée : 60 minutes — 75 € par personne
                     </p>
@@ -528,7 +524,10 @@
                     </p>
 
                     <div class="tarif-abo">
-                        <h4>✨ Tarifs dégressifs « abo »</h4>
+                        <h4>
+                            <span class="no-underline">✨ </span>Tarifs
+                            dégressifs « abo »
+                        </h4>
                         <ul>
                             <li>Cure 3 séances : –10 %</li>
                             <li>Cure 5 séances : –15 %</li>
@@ -615,13 +614,14 @@
                 <h2>💰 Tarifs Événements & Entreprises</h2>
 
                 <div class="tarifs-entreprises-intro">
+                    
+                    <p>Un accompagnement sur mesure pour veiller au bien être, à la régulation du stress et à la cohésion de votre / vos equipe(s) aux moyens :
                     <ul>
-                        <li>
-                            Des pratiques de yoga, breathwork et sound healing
-                            pensées pour accompagner le bien-être, la régulation
-                            du stress et la cohésion.
-                        </li>
-                        <li>Interventions sur mesure.</li>
+                        <li>Du yoga</li>
+                        <li>Des bains sonores </li>
+                        <li>De la respiration</li>
+                        <li>De la méditation</li>
+                        <li>cercles et espaces d’expression</li>
                     </ul>
                     <p class="tarifs-devis">Tarifs sur devis.</p>
                 </div>
@@ -734,7 +734,17 @@
         <nav class="bottom-nav" id="bottom-nav">
             <button class="bottom-nav-toggle" id="bottom-nav-toggle">
                 <span class="bottom-nav-label"></span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#d4a15f" d="M12.354 7.147a.5.5 0 0 0-.344-.145L12 7l-.007.001a.5.5 0 0 0-.347.146l-4.5 4.5a.5.5 0 0 0 .708.707L11.5 8.707v7.794a.5.5 0 1 0 1 0V8.706l3.646 3.647a.5.5 0 0 0 .707 0a.5.5 0 0 0 0-.707zM12 2C6.477 2 2 6.477 2 12s4.477 10 10 10c5.52-.006 9.994-4.48 10-10c0-5.523-4.477-10-10-10m0 19a9 9 0 1 1 0-18a9.01 9.01 0 0 1 9 9a9 9 0 0 1-9 9"/></svg>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                >
+                    <path
+                        fill="#d4a15f"
+                        d="M12.354 7.147a.5.5 0 0 0-.344-.145L12 7l-.007.001a.5.5 0 0 0-.347.146l-4.5 4.5a.5.5 0 0 0 .708.707L11.5 8.707v7.794a.5.5 0 1 0 1 0V8.706l3.646 3.647a.5.5 0 0 0 .707 0a.5.5 0 0 0 0-.707zM12 2C6.477 2 2 6.477 2 12s4.477 10 10 10c5.52-.006 9.994-4.48 10-10c0-5.523-4.477-10-10-10m0 19a9 9 0 1 1 0-18a9.01 9.01 0 0 1 9 9a9 9 0 0 1-9 9"
+                    />
+                </svg>
             </button>
             <ul class="bottom-nav-menu" id="bottom-nav-menu">
                 <li><a href="#histoire">L'histoire de yo:ga time</a></li>
@@ -746,7 +756,10 @@
                     <a href="#certifications">Certifications & formations</a>
                 </li>
                 <li class="bottom-nav-rdv">
-                    <a href="https://calendly.com/laury-yogatime?lid=ygjvde2x51fh&utm_medium=email&utm_source=braze&utm_campaign=2024Q4-NUR-TRIAL-ONB-ALL_ROLES-EN-Pers_Core_Onboarding&utm_content=user_url_text">Prise de rendez-vous</a>
+                    <a
+                        href="https://calendly.com/laury-yogatime?lid=ygjvde2x51fh&utm_medium=email&utm_source=braze&utm_campaign=2024Q4-NUR-TRIAL-ONB-ALL_ROLES-EN-Pers_Core_Onboarding&utm_content=user_url_text"
+                        >Prise de rendez-vous</a
+                    >
                 </li>
             </ul>
         </nav>
