--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>
                     Alors il a fallu faire un choix vital :<br />Partir pour ne
                     pas agoniser. Partir pour respirer et aller à la rencontre
-                    de ce qui j'allais devenir, ou plutôt redevenir.<br />Partir
+                    de qui j'allais devenir, ou plutôt redevenir.<br />Partir
                     pour ne pas devenir le fantôme de moi même.<br />Pas pour
                     oublier.<br />Mais pour survivre autrement.
                 </p>
